# MGARD

./: .gitignore  CMakeLists.txt
examples/python/: CMakeLists.txt  compress.cpp
examples/python/cpp/: test_mgard.cpp
examples/python/py/: mgard_test.ipynb  mgardpy.py
include/mgard-x/CompressionHighLevel/: CompressionHighLevel.hpp
include/mgard-x/CompressionLowLevel/: Compressor.h  Compressor.hpp  HybridHierarchyCompressor.h  HybridHierarchyCompressor.hpp  quant_pred.hpp  quant_pred.hpp.bak  reorder_int.hpp
include/mgard-x/ExternalCompressionLowLevel/ZFP/: Compressor.h
include/mgard-x/Lossless/: Lossless.hpp
include/mgard-x/Lossless/ParallelHuffman/: Huffman.hpp
include/mgard-x/Quantization/: LinearQuantization.hpp
include/mgard-x/RuntimeX/: DataTypes.h
src/mgard-x/Executables/: MgardSerialExec.cpp  mdr-x.cpp  mgard-x.cpp
